# web-api/src/app.ts
@@ -21,6 +21,7 @@ import { checkEmailAvailabilityLambda } from './lambdas/users/checkEmailAvailabi
 import { checkForReadyForTrialCasesLambda } from './lambdas/cases/checkForReadyForTrialCasesLambda';
 import { closeTrialSessionLambda } from './lambdas/trialSessions/closeTrialSessionLambda';
 import { coldCaseReportLambda } from './lambdas/reports/coldCaseReportLambda';
+import { getClerkDashboardStatsLambda } from './lambdas/reports/getClerkDashboardStatsLambda';
 import { completeDocketEntryQCLambda } from './lambdas/documents/completeDocketEntryQCLambda';
 import { completeMessageLambda } from './lambdas/messages/completeMessageLambda';
 import { completeWorkItemLambda } from './lambdas/workitems/completeWorkItemLambda';
@@ -886,6 +887,10 @@ app.delete(
     lambdaWrapper(exportPendingReportLambda),
   );
   app.get('/reports/cold-case-report', lambdaWrapper(coldCaseReportLambda));
+  app.get(
+    '/reports/clerk-dashboard-stats',
+    lambdaWrapper(getClerkDashboardStatsLambda),
+  );
   app.post(
     '/reports/trial-calendar-pdf',
     lambdaWrapper(generateTrialCalendarPdfLambda),
