# web-api/swagger.json
@@ -290,6 +290,58 @@
         }
       }
     },
+    "/reports/clerk-dashboard-stats": {
+      "parameters": [
+        {
+          "name": "year",
+          "in": "query",
+          "required": false,
+          "type": "integer"
+        }
+      ],
+      "get": {
+        "tags": [],
+        "summary": "get clerk of court dashboard stats",
+        "description": "get aggregated stats for the clerk of court dashboard.\n",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "200 response",
+            "schema": {
+              "$ref": "#/definitions/document"
+            }
+          }
+        },
+        "security": [
+          {
+            "CognitoUserPool": []
+          }
+        ]
+      },
+      "options": {
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "200 response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "type": "string"
+              },
+              "Access-Control-Allow-Methods": {
+                "type": "string"
+              },
+              "Access-Control-Allow-Credentials": {
+                "type": "string"
+              },
+              "Access-Control-Allow-Headers": {
+                "type": "string"
+              }
+            }
+          }
+        }
+      }
+    },
     "/reports/pending-report": {
       "get": {
         "summary": "create a pdf of the pending report",
